--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -8,9 +8,12 @@ body {
     transform: translate(-50%,0);
 }
 
+body > div {
+    margin-bottom: 28px;
+}
 
 body > footer {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     width : 100%;
     height : 28px;
